--- a/curso.html
+++ b/curso.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Curso — Fundamentos de Ciberseguridad</title>
+    <title>Curso en detalle</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body{font-family:'Inter',sans-serif}
-        .course-hero img{ width:100%; height:320px; object-fit:cover; border-radius:6px; }
-        .instructor-avatar{ width:56px; height:56px; object-fit:cover; border-radius:6px; }
+        body { font-family: 'Inter', sans-serif; }
+        .course-hero img { width: 100%; height: 100%; object-fit: cover; }
+        .instructor-avatar { width: 64px; height: 64px; border-radius: 16px; object-fit: cover; }
+        #curso-tags .badge { letter-spacing: 0.04em; border-radius: 999px; }
+        #curso-detalle-container { max-width: 1140px; }
     </style>
 </head>
 <body class="bg-light">
@@ -22,166 +24,73 @@
                 <div class="container" id="curso-detalle-container">
                     <div class="row">
                         <div class="col-lg-8">
-                            <div class="course-hero mb-4">
-                                <img src="Pictures/Ciberseguridad.jpg" alt="Fundamentos de Ciberseguridad">
+                            <div class="course-hero mb-4 position-relative">
+                                <div class="ratio ratio-16x9 rounded overflow-hidden shadow-sm">
+                                    <img id="curso-imagen" src="Pictures/default-course.jpg" alt="Imagen del curso">
+                                </div>
                             </div>
-                            <h1 class="h3 fw-bold">Fundamentos de Ciberseguridad</h1>
-                            <p class="text-muted mb-2">Profesor: Johnathan Fletcher • <span class="text-warning">★★★★☆</span> • 1.2k valoraciones</p>
-
-                            <div class="mb-4">
+                            <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-between gap-3">
+                                <div>
+                                    <h1 id="curso-titulo" class="h3 fw-bold mb-1">Cargando curso...</h1>
+                                    <p id="curso-metadata" class="text-muted mb-0 small">
+                                        Profesor: — • <span class="text-warning">★★★★★</span> • 0 valoraciones
+                                    </p>
+                                </div>
                                 <div class="d-flex gap-2">
-                                    <a class="btn btn-primary" href="#">Iniciar curso</a>
-                                    <a class="btn btn-outline-secondary" href="#">Guardar</a>
+                                    <button id="btn-cta-primario" class="btn btn-primary px-4">Iniciar curso</button>
+                                    <button id="btn-cta-secundario" class="btn btn-outline-light text-white border px-4">Ver temario</button>
                                 </div>
                             </div>
 
-                            <h5>Descripción</h5>
-                            <p class="text-secondary">Aprende los fundamentos de la ciberseguridad: conceptos, amenazas, defensas y buenas prácticas. Este curso cubre teoría y ejercicios prácticos para entender cómo proteger sistemas y redes.</p>
+                            <section class="mt-4">
+                                <h5>Descripción</h5>
+                                <p id="curso-descripcion" class="text-secondary">
+                                    Explora la descripción completa del curso y cómo se alinea con tus objetivos profesionales.
+                                </p>
+                                <div id="curso-tags" class="d-flex flex-wrap gap-2 mt-3 small text-uppercase text-secondary"></div>
+                            </section>
 
-                            <h5 class="mt-4">Contenido del curso</h5>
-                            <div class="accordion" id="curriculum">
-                                <!-- Section 1 -->
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingOne">
-                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            1. Introducción a la ciberseguridad
-                                        </button>
-                                    </h2>
-                                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#curriculum">
-                                        <div class="accordion-body small">
-                                            <ol class="mb-2">
-                                                <li>Presentación</li>
-                                                <li>Historia y contexto</li>
-                                                <li>Principios básicos</li>
-                                                <li>Actores y amenazas</li>
-                                                <li>Modelos de seguridad</li>
-                                            </ol>
-                                            <div class="mt-2"><strong>Examen:</strong> Cuestionario de la sección 1</div>
+                            <section class="mt-5">
+                                <h5>Contenido del curso</h5>
+                                <div class="accordion" id="curriculum">
+                                    <div class="text-center py-4 text-muted small">
+                                        Cargando el programa académico...
+                                    </div>
+                                </div>
+                            </section>
+
+                            <section class="mt-5">
+                                <h5>Sobre el instructor</h5>
+                                <div class="card p-3 p-md-4 mb-5">
+                                    <div class="d-flex align-items-start gap-3">
+                                        <img id="instructor-avatar" src="Pictures/profile-icon.png" alt="Instructor" class="instructor-avatar border shadow-sm">
+                                        <div>
+                                            <div id="instructor-nombre" class="fw-semibold">—</div>
+                                            <div id="instructor-bio" class="small text-secondary">
+                                                Conoce al especialista responsable de guiarte durante el curso.
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-
-                                <!-- Section 2 -->
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingTwo">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            2. Arquitectura y modelos
-                                        </button>
-                                    </h2>
-                                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#curriculum">
-                                        <div class="accordion-body small">
-                                            <ol class="mb-2">
-                                                <li>Capas de seguridad</li>
-                                                <li>Modelos de confianza</li>
-                                                <li>Arquitectura de sistemas seguros</li>
-                                            </ol>
-                                            <div class="mt-2"><strong>Examen:</strong> Cuestionario de la sección 2</div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Section 3 -->
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingThree">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                            3. Amenazas y vectores
-                                        </button>
-                                    </h2>
-                                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#curriculum">
-                                        <div class="accordion-body small">
-                                            <ol class="mb-2">
-                                                <li>Malware y tipos</li>
-                                                <li>Ingeniería social</li>
-                                                <li>Vulnerabilidades comunes</li>
-                                            </ol>
-                                            <div class="mt-2"><strong>Examen:</strong> Cuestionario de la sección 3</div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Section 4 -->
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingFour">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                            4. Controles y mitigaciones
-                                        </button>
-                                    </h2>
-                                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#curriculum">
-                                        <div class="accordion-body small">
-                                            <ol class="mb-2">
-                                                <li>Controles administrativos</li>
-                                                <li>Controles técnicos</li>
-                                                <li>Controles físicos</li>
-                                            </ol>
-                                            <div class="mt-2"><strong>Examen:</strong> Cuestionario de la sección 4</div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Section 5 -->
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingFive">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                            5. Seguridad en redes
-                                        </button>
-                                    </h2>
-                                    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#curriculum">
-                                        <div class="accordion-body small">
-                                            <ol class="mb-2">
-                                                <li>Fundamentos de redes</li>
-                                                <li>Seguridad en protocolos</li>
-                                                <li>Firewalls y segmentación</li>
-                                            </ol>
-                                            <div class="mt-2"><strong>Examen:</strong> Cuestionario de la sección 5</div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Section 6 (final) -->
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingSix">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                            6. Buenas prácticas y resumen
-                                        </button>
-                                    </h2>
-                                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#curriculum">
-                                        <div class="accordion-body small">
-                                            <ol class="mb-2">
-                                                <li>Checklist de seguridad</li>
-                                                <li>Métricas y monitoreo</li>
-                                                <li>Planes de respuesta</li>
-                                            </ol>
-                                            <div class="mt-2"><strong>EXAMEN FINAL:</strong> Evaluación de todo el curso</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <h5 class="mt-4">Sobre el instructor</h5>
-                            <div class="card p-3 mb-5">
-                                <div class="d-flex align-items-center">
-                                    <img src="Pictures/profile-icon.png" alt="Instructor" class="instructor-avatar me-3">
-                                    <div>
-                                        <div class="fw-semibold">Johnathan Fletcher</div>
-                                        <div class="small text-secondary">Experto en ciberseguridad con 10+ años de experiencia en defensa y auditoría</div>
-                                    </div>
-                                </div>
-                            </div>
+                            </section>
                         </div>
 
                         <aside class="col-lg-4">
-                            <div class="card p-3 mb-3">
+                            <div class="card p-3 p-md-4 mb-3">
                                 <div class="fs-5 fw-semibold">Acceso al curso</div>
-                                <div class="small text-secondary mb-3">Comienza ahora y accede a todas las lecciones</div>
+                                <p id="curso-resumen-sidebar" class="small text-secondary mb-3">
+                                    Comienza ahora y desbloquea todas las lecciones, evaluaciones y recursos descargables.
+                                </p>
                                 <button id="btn-empezar-ahora" class="btn btn-primary w-100 mb-2">Empezar ahora</button>
-                                <a class="btn btn-outline-secondary w-100" href="#">Guardar en Favoritos</a>
+                                <button id="btn-guardar-favorito" class="btn btn-outline-secondary w-100">Guardar en favoritos</button>
                             </div>
-                            <div class="card p-3">
-                                <div class="small text-secondary">Detalles</div>
-                                <ul class="list-unstyled small mb-0">
-                                    <li>Duración: 4h 20m</li>
-                                    <li>Nivel: Intermedio</li>
-                                    <li>Idioma: Español</li>
+                            <div class="card p-3 p-md-4">
+                                <div class="small text-secondary text-uppercase fw-semibold mb-2">Detalles</div>
+                                <ul class="list-unstyled small mb-0" id="curso-detalles-list">
+                                    <li>Duración: —</li>
+                                    <li>Nivel: —</li>
+                                    <li>Idioma: —</li>
+                                    <li>Estudiantes inscritos: —</li>
                                 </ul>
                             </div>
                         </aside>
