--- a/settings.html
+++ b/settings.html
@@ -23,7 +23,16 @@
             
             <main class="flex-grow-1 p-4 p-lg-5 overflow-auto">
                 <h2 class="display-6 fw-bold mb-4">Configuración</h2>
-                <div class="bg-white p-4 rounded shadow">
+                <div class="bg-white p-4 p-lg-5 rounded shadow-sm">
+                    <div class="mb-4">
+                        <h3 class="h5 fw-semibold mb-2">Gestor de videos</h3>
+                        <p class="text-secondary small mb-0">
+                            Los usuarios administradores pueden subir o reemplazar videos de cada módulo. 
+                            Cada lección debe contar con un archivo de video (formato MP4, WebM, OGG o MOV) accesible para los estudiantes inscritos.
+                        </p>
+                    </div>
+                    <div id="admin-video-feedback" class="alert alert-warning d-none small"></div>
+                    <div id="admin-video-manager" class="accordion" aria-live="polite"></div>
                 </div>
             </main>
         </div>
@@ -31,6 +40,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts/include.js"></script>
+    <script src="scripts/api.js"></script>
+    <script src="scripts/auth.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/admin-media.js"></script>
 </body>
 </html>
